--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="card_back">#01455C</color>
+    <color name="text_color">#07BE92</color>
+    <color name="text_color2">#0592BD</color>
 </resources>
