Maqueta form view

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,7 +53,8 @@
         android:id="@+id/txtAddCard"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="8dp"
         android:text="Agregar una tarjeta de debito o credito"
         android:textAlignment="center"
         android:textColor="@color/card_back"
