--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_500">#07BE92</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
@@ -11,4 +11,6 @@
     <color name="text_color">#07BE92</color>
     <color name="text_color2">#0592BD</color>
     <color name="card_view_shadow">#00000029</color>
+    <color name="screen_back">#F5F5F5</color>
+    <color name="cancel_button">#BFBFBF</color>
 </resources>
