--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,9 @@
     <color name="card_back">#01455C</color>
     <color name="text_color">#07BE92</color>
     <color name="text_color2">#0592BD</color>
-    <color name="card_view_shadow">#00000029</color>
+    <color name="card_view_shadow">#F5F5F5</color>
     <color name="screen_back">#F5F5F5</color>
     <color name="cancel_button">#BFBFBF</color>
+    <color name="red">#FF0000</color>
+    <color name="link">#0592BD</color>
 </resources>
