--- a/app/src/main/res/layout/item_movement.xml
+++ b/app/src/main/res/layout/item_movement.xml
@@ -2,16 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/txtMovementTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:text="titulo"
         android:textColor="@color/card_back"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/txtMovementAmount"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,7 +28,7 @@
         android:id="@+id/txtMovementAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="1000"
         android:textColor="@color/card_back"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
